# python-project-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  Makefile  pyproject.toml
