[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "{{cookiecutter.python}}"
{%- if cookiecutter.analysis == "y" %}
ipykernel = "^6.22.0"
plotly = "^5.14.0"
pandas = "^1.1.3"
{%- endif %}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"
{%- if cookiecutter.analysis == "y" %}
nbqa = "^1.6.4"
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | venv
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 